test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/sub_void_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[28]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(y)
  ;
  void
  *
  identifier(x)
  =
  &
  identifier(y)
  ;
  void
  *
  identifier(null)
  =
  const int(0)
  ;
  return
  identifier(x)
  -
  identifier(null)
  ;
  }
